image conditional for pages

--- a/src/Sustain/AppBundle/Resources/views/Section/index.html.twig
+++ b/src/Sustain/AppBundle/Resources/views/Section/index.html.twig
@@ -21,8 +21,10 @@
                                         <h3>{{ page.teaserImageCaption }}</h3>
                                         <a href="{{ path('page_show', {id:page.id}) }}"
                                            title="Read more about {{ page.menuName }} ">
+                                            {% if page.teaserImage!='NA' %}
                                             <img src="{{ page.teaserImage }}" class="img-responsive img-thumbnail"
                                                  alt="{{ page.menuName }}">
+                                            {% endif %}
                                         </a>
 
                                         <div class="caption">
@@ -44,8 +46,10 @@
                                         <h3>{{ page.teaserImageCaption }}</h3>
                                         <a href="{{ path('page_show', {id:page.id}) }}"
                                            title="Read more about {{ page.menuName }} ">
-                                            <img src="{{ page.teaserImage }}" class="img-responsive img-thumbnail"
-                                                 alt="{{ page.menuName }}">
+                                            {% if page.teaserImage!='NA' %}
+                                                <img src="{{ page.teaserImage }}" class="img-responsive img-thumbnail"
+                                                     alt="{{ page.menuName }}">
+                                            {% endif %}
                                         </a>
 
                                         <div class="caption">
@@ -67,8 +71,10 @@
                                         <h3>{{ page.teaserImageCaption }}</h3>
                                         <a href="{{ path('page_show', {id:page.id}) }}"
                                            title="Read more about {{ page.menuName }} ">
-                                            <img src="{{ page.teaserImage }}" class="img-responsive img-thumbnail"
-                                                 alt="{{ page.menuName }}">
+                                            {% if page.teaserImage!='NA' %}
+                                                <img src="{{ page.teaserImage }}" class="img-responsive img-thumbnail"
+                                                     alt="{{ page.menuName }}">
+                                            {% endif %}
                                         </a>
 
                                         <div class="caption">
@@ -111,8 +117,10 @@
                                 <h3>{{ page.teaserImageCaption }}</h3>
                                 <a href="{{ path('page_show', {id:page.id}) }}"
                                    title="Read more about {{ page.menuName }} ">
-                                    <img src="{{ page.teaserImage }}" class="img-responsive img-thumbnail"
-                                         alt="{{ page.menuName }}">
+                                    {% if page.teaserImage!='NA' %}
+                                        <img src="{{ page.teaserImage }}" class="img-responsive img-thumbnail"
+                                             alt="{{ page.menuName }}">
+                                    {% endif %}
                                 </a>
 
                                 <div class="caption">
@@ -134,8 +142,10 @@
                                 <h3>{{ page.teaserImageCaption }}</h3>
                                 <a href="{{ path('page_show', {id:page.id}) }}"
                                    title="Read more about {{ page.menuName }} ">
-                                    <img src="{{ page.teaserImage }}" class="img-responsive img-thumbnail"
-                                         alt="{{ page.menuName }}">
+                                    {% if page.teaserImage!='NA' %}
+                                        <img src="{{ page.teaserImage }}" class="img-responsive img-thumbnail"
+                                             alt="{{ page.menuName }}">
+                                    {% endif %}
                                 </a>
 
                                 <div class="caption">
@@ -157,8 +167,10 @@
                                 <h3>{{ page.teaserImageCaption }}</h3>
                                 <a href="{{ path('page_show', {id:page.id}) }}"
                                    title="Read more about {{ page.menuName }} ">
-                                    <img src="{{ page.teaserImage }}" class="img-responsive img-thumbnail"
-                                         alt="{{ page.menuName }}">
+                                    {% if page.teaserImage!='NA' %}
+                                        <img src="{{ page.teaserImage }}" class="img-responsive img-thumbnail"
+                                             alt="{{ page.menuName }}">
+                                    {% endif %}
                                 </a>
 
                                 <div class="caption">
