--- a/src/Sustain/AppBundle/Resources/views/Module/show.html.twig
+++ b/src/Sustain/AppBundle/Resources/views/Module/show.html.twig
@@ -1,6 +1,6 @@
 {% extends 'AppBundle::layout.html.twig' %}
 
-{% block title %}Modules{% endblock %}
+{% block title %}{{ application_name }} Module {{ entity.name }}{% endblock %}
 
 {% block body -%}
     <div class="col-sm-10">
