--- a/src/Sustain/AppBundle/Resources/views/Event/show.html.twig
+++ b/src/Sustain/AppBundle/Resources/views/Event/show.html.twig
@@ -1,5 +1,7 @@
 {% extends 'AppBundle::layout.html.twig' %}
 
+{% block title %}{{ application_name }} Event {{ entity.title }} {% endblock %}
+
 {% block body -%}
 
     <div class="col-sm-10">
