--- a/src/Sustain/AppBundle/Resources/public/css/local.css
+++ b/src/Sustain/AppBundle/Resources/public/css/local.css
@@ -7,35 +7,33 @@ h1, h2, h3 {
     font-family: 'Raleway', 'Arial', 'sans-serif';
 }
 
+.sidebar {
+    padding-left: 2rem;
+}
 
 .col-sm-10 {
-    padding: 3rem;
+    padding: 2em
 }
 
 .col-sm-12 {
-    padding: 3rem;
+    padding: 2em;
 }
 
-
-.col-sm-2 {
-    padding-top: 1rem;
+.col-sm-4 {
+    padding: 2em;
 }
 
-.card-img-top{
-    width:100%;
-    height:auto;
+.navbar {
+    background-color: #0b58a2;
 }
 
-.jumbotron {
-    max-height: 10rem;
-    padding: 1rem;
-}
-.jumbotron .container {
-    margin-left: 2rem;
+.sidebar {
+    background-color: #0b58a2;
+    color:white
 }
 
-.main-content {
-    margin-top: 2rem;
+.sidebar a, .sidebar h2 {
+    color:white
 }
 /**********  Accessibility **********/
 #skip a, #skip a:hover, #skip a:visited
@@ -87,121 +85,6 @@ input + label {
     margin-right: 15px;
 }
 
-/********** Media Queries **********/
-
-@media (max-width: 1199px) {
-    .navbar .nav > li > a {
-        padding-left: 7px;
-        padding-right: 7px;
-    }
-}
-
-@media (max-width: 920px) {
-    .navbar .nav > li > a {
-        padding-left: 3px;
-        padding-right: 3px;
-        font-size: smaller;
-    }
-}
-
-
-@media (max-width: 800px) {
-    .navbar .nav > li > a {
-        padding-left: 2px;
-        padding-right: 2px;
-        font-size: smaller;
-    }
-}
-
-/********** navbar *******************/
-
-.sidebar {
-    background-color: #154d81;
-    min-height: 100vh;
-    color: #ecf0f1;
-}
-
-.sidebar .nav li a {
-    color: #ecf0f1;
-}
-
-.sidebar .nav li a:hover {
-    color: #d8d1d1;
-    background-color: #2b78c0;
-}
-
-.navbar-default {
-    background-color: #154d81;
-    border-color: #2b78c0;
-}
-.navbar-default .navbar-brand {
-    color: #ecf0f1;
-}
-.navbar-default .navbar-brand:hover, .navbar-default .navbar-brand:focus {
-    color: #d8d1d1;
-}
-.navbar-default .navbar-text {
-    color: #ecf0f1;
-}
-.navbar-default .navbar-nav > li > a {
-    color: #ecf0f1;
-}
-.navbar-default .navbar-nav > li > a:hover, .navbar-default .navbar-nav > li > a:focus {
-    color: #d8d1d1;
-}
-.navbar-default .navbar-nav > li > .dropdown-menu {
-    background-color: #154d81;
-}
-.navbar-default .navbar-nav > li > .dropdown-menu > li > a {
-    color: #ecf0f1;
-}
-.navbar-default .navbar-nav > li > .dropdown-menu > li > a:hover,
-.navbar-default .navbar-nav > li > .dropdown-menu > li > a:focus {
-    color: #d8d1d1;
-    background-color: #2b78c0;
-}
-.navbar-default .navbar-nav > li > .dropdown-menu > li > .divider {
-    background-color: #154d81;
-}
-.navbar-default .navbar-nav > .active > a, .navbar-default .navbar-nav > .active > a:hover, .navbar-default .navbar-nav > .active > a:focus {
-    color: #00ee00;
-}
-.navbar-default .navbar-nav > .open > a, .navbar-default .navbar-nav > .open > a:hover, .navbar-default .navbar-nav > .open > a:focus {
-    color: #d8d1d1;
-    background-color: #2b78c0;
-}
-.navbar-default .navbar-toggle {
-    border-color: #2b78c0;
-}
-.navbar-default .navbar-toggle:hover, .navbar-default .navbar-toggle:focus {
-    background-color: #2b78c0;
-}
-.navbar-default .navbar-toggle .icon-bar {
-    background-color: #ecf0f1;
-}
-.navbar-default .navbar-collapse,
-.navbar-default .navbar-form {
-    border-color: #ecf0f1;
-}
-.navbar-default .navbar-link {
-    color: #ecf0f1;
-}
-.navbar-default .navbar-link:hover {
-    color: #d8d1d1;
-}
-
-@media (max-width: 767px) {
-    .navbar-default .navbar-nav .open .dropdown-menu > li > a {
-        color: #ecf0f1;
-    }
-    .navbar-default .navbar-nav .open .dropdown-menu > li > a:hover, .navbar-default .navbar-nav .open .dropdown-menu > li > a:focus {
-        color: #d8d1d1;
-    }
-    .navbar-default .navbar-nav .open .dropdown-menu > .active > a, .navbar-default .navbar-nav .open .dropdown-menu > .active > a:hover, .navbar-default .navbar-nav .open .dropdown-menu > .active > a:focus {
-        color: #d8d1d1;
-        background-color: #2b78c0;
-    }
-}
 
 /* CUSTOMIZE THE CAROUSEL
 -------------------------------------------------- */
@@ -210,16 +93,7 @@ input + label {
 .carousel {
     margin-bottom: 4rem;
 }
-/* Since positioning the image, we need to help out the caption */
-.carousel-caption {
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    min-width: 100%;
-    background: rgba(0, 0, 0, .75);
-    z-index: 2;
-    padding: 2rem;
-}
+
 
 /* Declare heights because of positioning of img element */
 .carousel-item {
@@ -234,21 +108,15 @@ input + label {
     height: 32rem;
 }
 
-.carousel-indicators {
-    top: 1.5rem;
-    right: 1.5rem;
-    bottom: auto;
-    left: auto;
-    width: 1rem;
-    margin-left: 0;
-}
 
-.carousel-indicators > li {
-    margin-bottom: .25rem;
-}
-
-
-.carousel > .container {
+/* Since positioning the image, we need to help out the caption */
+.carousel-caption {
+    z-index: 10;
+    position: absolute;
+    bottom: 0;
+    left:0;
+    background: rgba(0, 0, 0, .75);
+    width:100vw;
 
 }
 
