--- a/src/Sustain/AppBundle/Resources/views/Opportunity/index.html.twig
+++ b/src/Sustain/AppBundle/Resources/views/Opportunity/index.html.twig
@@ -1,5 +1,7 @@
 {% extends 'AppBundle::layout.html.twig' %}
 
+{% block title %}{{ application_name }} Partners and Internships {% endblock %}
+
 {% block body -%}
     <div class="col-sm-10">
         <h1>Partners/Internships</h1>
