--- a/app/Resources/views/default/index.html.twig
+++ b/app/Resources/views/default/index.html.twig
@@ -1,41 +1,8 @@
 {% extends 'base.html.twig' %}
 
+{% block sidebar %}{% endblock %}
 {% block body %}
 
-
-    <!-- Carousel
-    ================================================== -->
-    <div id="myCarousel" class="carousel slide" data-ride="carousel">
-        <!-- Indicators -->
-        <ol class="carousel-indicators">
-            {% for slide in carousel %}
-                <li data-target="#myCarousel" data-slide-to="{{ loop.index }}" class="{% if loop.first %}active{% endif %}"></li>
-            {% endfor %}
-        </ol>
-        <div class="carousel-inner" role="listbox">
-            {% for slide in carousel %}
-                <div class="carousel-item {% if loop.first %}active{% endif %}">
-                    <img class="first-slide" src="{{ slide.image }}" alt="First slide">
-                    <div class="container">
-                        <div class="carousel-caption text-xs-left">
-                            <h1>{{ slide.headline }}</h1>
-                            <p>{{ slide.body|raw }}</p>
-                        </div>
-                    </div>
-                </div>
-            {% endfor %}
-        </div>
-        <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
-            <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-            <span class="sr-only">Previous</span>
-        </a>
-        <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
-            <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-            <span class="sr-only">Next</span>
-        </a>
-    </div><!-- /.carousel -->
-
-    <!--  ================================================== -->
     <!-- Wrap the rest of the page in another container to center all the content. -->
 
     <div class="container-fluid">
