--- a/src/Sustain/AppBundle/Resources/views/Event/index.html.twig
+++ b/src/Sustain/AppBundle/Resources/views/Event/index.html.twig
@@ -8,6 +8,7 @@
     {{ parent() }}
 {% endblock %}
 
+{% block title %}{{ application_name }} Events Index {% endblock %}
 
 {% block body -%}
     <div class="col-sm-10">
