--- a/src/Sustain/AppBundle/Resources/views/Module/index.html.twig
+++ b/src/Sustain/AppBundle/Resources/views/Module/index.html.twig
@@ -1,6 +1,6 @@
 {% extends 'AppBundle::layout.html.twig' %}
 
-{% block title %}Modules{% endblock %}
+{% block title %}{{ application_name }} Modules Index {% endblock %}
 
 {% block body -%}
     <div class="col-sm-10">
@@ -23,7 +23,7 @@
                 <div class="card-block">
                     <h3><a href="{{ path('module_show', { 'id': entity.id }) }}">{{ entity.name|raw }}</a></h3>
                     {% for tag in entity.tags %}
-                        <span class="label label-default margin-right" style="background-color: {{ tag.color }};">
+                        <span class="btn btn-default btn-sm" style="background-color: {{ tag.color }};color:white;">
                                 {{ tag.name }}
                                 </span>
                     {% endfor %}
