--- a/src/Sustain/AppBundle/Resources/views/Objective/index.html.twig
+++ b/src/Sustain/AppBundle/Resources/views/Objective/index.html.twig
@@ -1,6 +1,6 @@
 {% extends 'AppBundle::layout.html.twig' %}
 
-{% block title %}Objectives{% endblock %}
+{% block title %}{{ application_name }} Objectives Index {% endblock %}
 
 {% block body -%}
     <div class="col-sm-10">
