--- a/src/Sustain/AppBundle/Resources/views/Page/index.html.twig
+++ b/src/Sustain/AppBundle/Resources/views/Page/index.html.twig
@@ -1,5 +1,7 @@
 {% extends 'AppBundle::layout.html.twig' %}
 
+{% block title %}{{ application_name }} Stories Index {% endblock %}
+
 {% block body -%}
     <div class="col-sm-10">
     <h1>Stories</h1>
