--- a/src/Sustain/AppBundle/Resources/views/File/index.html.twig
+++ b/src/Sustain/AppBundle/Resources/views/File/index.html.twig
@@ -6,7 +6,7 @@
     <div class="col-sm-10">
 
 
-        <h1>Resources</h1>
+        <h1>Files</h1>
         {% if is_granted('ROLE_ADMIN') %}
             <a class="btn btn-primary pull-right" id='file_new_upload' title='Upload Resource'
                href="{{ path('file_new') }}"><i class="glyphicon
@@ -23,7 +23,7 @@
         <div class="alert alert-info alert-dismissible" role="alert">
             <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span
                         aria-hidden="true">&times;</span></button>
-            Resources consist of module activities, website resources, maps, background readings, and others. Click on
+            The files here include module activities, website resources, maps, background readings, and others. Click on
             the title to download.
         </div>
 
