--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -47,7 +47,8 @@
                     <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink1">
                         <a class="dropdown-item" href="{{ path('module') }}">Teaching Resources</a>
                         <a class="dropdown-item" href="{{ path('page_show', { 'id':10 }) }}">Service Learning</a>
-                        <a class="dropdown-item" href="{{ path('page_show', { 'id':14 }) }}">Watershed UGA in the eLC</a>
+                        <a class="dropdown-item" href="{{ path('page_show', { 'id':14 }) }}">Watershed UGA in the
+                            eLC</a>
                         <a class="dropdown-item" href="{{ path('page_show', { 'id':49 }) }}">Faculty Forms</a>
                     </div>
                 </li>
@@ -99,62 +100,63 @@
                 <li class="nav-item"><a class="nav-link" href="{{ path('section') }}">Stories</a></li>
                 <li class="nav-item"><a class="nav-link" href="{{ path('page_show', { 'id': 9 }) }}">Donate</a></li>
             </ul>
-            <ul class="navbar-nav mr-auto pull-xs-right">
+
+            <ul class="navbar-nav mr-auto">
                 {% if is_granted('IS_AUTHENTICATED_REMEMBERED') %}
-                    <li class="nav-item dropdown">
-                        <a class="nav-link" href="#" class="dropdown-toggle" data-toggle="dropdown"
-                           data-hover="dropdown">Profile</a>
-                        <ul class="dropdown-menu" role="menu">
-                            <li><a class="nav-link" href="{{ path('user_profile') }}">My Profile</a></li>
-                            <li>
-                                <a class="nav-link" title="Logout" href="{{ path('logout') }}">Logout</a>
-                            </li>
-                        </ul>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ path('user_profile') }}">My Profile</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" title="Logout" href="{{ path('logout') }}">Logout</a>
                     </li>
                 {% else %}
-                    <li>
+                    <li class="nav-item">
                         <a class="nav-link" title="Login" href="{{ path('user_profile') }}">Login</a>
                     </li>
                 {% endif %}
+
                 <li id="skip">
                     <a id="main_content" href="#main_nav">Skip to Top</a>
                 </li>
             </ul>
+            <a target="_blank" href="https://www.instagram.com/watershed.uga"><img title="Instagram" src="{{ asset('bundles/app/images/insta.png') }}"/> </a>
+            <a target="_blank"  href="https://www.facebook.com/watersheduga/"><img title="Facebook" src="{{ asset('bundles/app/images/face.png') }}"/> </a>
         </div>
     </nav>
 
     {% if 'landing' in app.request.attributes.get('_route') %}
-    <!-- Carousel
-================================================== -->
-    <div id="myCarousel" class="carousel slide" data-ride="carousel">
-        <!-- Indicators -->
-        <ol class="carousel-indicators">
-            {% for slide in carousel %}
-                <li data-target="#myCarousel" data-slide-to="{{ loop.index }}" class="{% if loop.first %}active{% endif %}"></li>
-            {% endfor %}
-        </ol>
-        <div class="carousel-inner" role="listbox">
-            {% for slide in carousel %}
-                <div class="carousel-item {% if loop.first %}active{% endif %}">
-                    <img class="first-slide" src="{{ slide.image }}" alt="First slide">
-                    <div class="carousel-caption d-none d-md-block">
-                        <h1>{{ slide.headline }}</h1>
-                        <p>{{ slide.body|raw }}</p>
+        <!-- Carousel
+    ================================================== -->
+        <div id="myCarousel" class="carousel slide" data-ride="carousel">
+            <!-- Indicators -->
+            <ol class="carousel-indicators">
+                {% for slide in carousel %}
+                    <li data-target="#myCarousel" data-slide-to="{{ loop.index }}"
+                        class="{% if loop.first %}active{% endif %}"></li>
+                {% endfor %}
+            </ol>
+            <div class="carousel-inner" role="listbox">
+                {% for slide in carousel %}
+                    <div class="carousel-item {% if loop.first %}active{% endif %}">
+                        <img class="first-slide" src="{{ slide.image }}" alt="First slide">
+                        <div class="carousel-caption d-none d-md-block">
+                            <h1>{{ slide.headline }}</h1>
+                            <p>{{ slide.body|raw }}</p>
+                        </div>
                     </div>
-                </div>
-            {% endfor %}
-        </div>
-        <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
-            <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-            <span class="sr-only">Previous</span>
-        </a>
-        <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
-            <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-            <span class="sr-only">Next</span>
-        </a>
-    </div><!-- /.carousel -->
+                {% endfor %}
+            </div>
+            <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
+                <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+                <span class="sr-only">Previous</span>
+            </a>
+            <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
+                <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+                <span class="sr-only">Next</span>
+            </a>
+        </div><!-- /.carousel -->
 
-    <!--  ================================================== -->
+        <!--  ================================================== -->
     {% endif %}
 
     <div class="row">
