--- a/src/Sustain/UserBundle/Resources/views/User/index.html.twig
+++ b/src/Sustain/UserBundle/Resources/views/User/index.html.twig
@@ -1,6 +1,6 @@
 {% extends '::base.html.twig' %}
 
-{% block title %}Profiles{% endblock %}
+{% block title %}{{ application_name }} Profiles{% endblock %}
 
 {% block body -%}
     <div class="col-sm-12">
