--- a/src/Sustain/UserBundle/Resources/views/User/show.html.twig
+++ b/src/Sustain/UserBundle/Resources/views/User/show.html.twig
@@ -1,5 +1,7 @@
 {% extends '::base.html.twig' %}
 
+{% block title %}{{ application_name }} Profile {{ entity.firstname }} {{ entity.lastname }}{% endblock %}
+
 {% block body -%}
 
     <div class="well col-sm-12">
