--- a/src/Sustain/AppBundle/Resources/views/File/index.html.twig
+++ b/src/Sustain/AppBundle/Resources/views/File/index.html.twig
@@ -1,6 +1,6 @@
 {% extends 'AppBundle::layout.html.twig' %}
 
-{% block title %} Resources{% endblock %}
+{% block title %}{{ application_name }} Watershed Files Index{% endblock %}
 
 {% block body %}
     <div class="col-sm-10">
