--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -124,7 +124,7 @@
         </div>
     </nav>
 
-    {% if 'landing' in app.request.attributes.get('_route') %}
+    {% if carousel is defined %}
         <!-- Carousel
     ================================================== -->
         <div id="myCarousel" class="carousel slide" data-ride="carousel">
