--- a/src/Sustain/AppBundle/Resources/views/layout.html.twig
+++ b/src/Sustain/AppBundle/Resources/views/layout.html.twig
@@ -79,6 +79,7 @@
         {% if is_granted('ROLE_ADMIN') %}
             <hr/>
             <ul class="nav nav-pills flex-column">
+                <li class="nav-item"><a class="nav-link" href="{{ path('announcement_edit', {'id': 1}) }}">Announcement</a></li>
                 <li class="nav-item">Labels</li>
                 <li class="nav-item"><a class="nav-link" href="{{ path('tag') }}"> List Labels</a></li>
                 <li class="nav-item"><a class="nav-link" href="{{ path('tag_new') }}">New Label</a></li>
