--- a/src/Sustain/AppBundle/Resources/views/Category/edit.html.twig
+++ b/src/Sustain/AppBundle/Resources/views/Category/edit.html.twig
@@ -1,16 +1,11 @@
 {% extends '::base.html.twig' %}
 
 {% block body -%}
+<div class="col-sm-10">
     <h1>Category edit</h1>
 
     {{ form(edit_form) }}
 
-        <ul class="record_actions">
-    <li>
-        <a href="{{ path('category') }}">
-            Back to the list
-        </a>
-    </li>
-    <li>{{ form(delete_form) }}</li>
-</ul>
+{{ form(delete_form) }}
+</div>
 {% endblock %}
