--- a/src/Sustain/AppBundle/Resources/views/Opportunity/edit.html.twig
+++ b/src/Sustain/AppBundle/Resources/views/Opportunity/edit.html.twig
@@ -1,9 +1,11 @@
 {% extends '::base.html.twig' %}
 
 {% block body -%}
+<div class="col-sm-10">
     <h1>Opportunity edit</h1>
 
     {{ form(edit_form) }}
 
     {{ form(delete_form) }}
+</div>
 {% endblock %}
