--- a/src/Sustain/AppBundle/Resources/views/Opportunity/new.html.twig
+++ b/src/Sustain/AppBundle/Resources/views/Opportunity/new.html.twig
@@ -1,9 +1,10 @@
 {% extends '::base.html.twig' %}
 
 {% block body -%}
+<div class="col-sm-10">
     <h1>Opportunity creation</h1>
 
     {{ form(form) }}
 
-
+</div>
 {% endblock %}
