--- a/src/Sustain/AppBundle/Resources/views/Tag/edit.html.twig
+++ b/src/Sustain/AppBundle/Resources/views/Tag/edit.html.twig
@@ -1,9 +1,11 @@
 {% extends 'AppBundle::layout.html.twig' %}
 
 {% block body -%}
+<div class="col-sm-10">
     <h1>Label edit</h1>
 
     {{ form(edit_form) }}
 
     {{ form(delete_form) }}
+</div>
 {% endblock %}
