update carousel ui

--- a/src/Sustain/AppBundle/Resources/views/Carousel/edit.html.twig
+++ b/src/Sustain/AppBundle/Resources/views/Carousel/edit.html.twig
@@ -1,16 +1,18 @@
 {% extends '::base.html.twig' %}
 
 {% block body -%}
-    <h1>Carousel edit</h1>
+    <div class="col-sm-10">
+        <h1>Carousel edit</h1>
 
-    {{ form(edit_form) }}
+        {{ form(edit_form) }}
 
         <ul class="record_actions">
-    <li>
-        <a href="{{ path('carousel') }}">
-            Back to the list
-        </a>
-    </li>
-    <li>{{ form(delete_form) }}</li>
-</ul>
+            <li>
+                <a href="{{ path('carousel') }}">
+                    Back to the list
+                </a>
+            </li>
+            <li>{{ form(delete_form) }}</li>
+        </ul>
+    </div>
 {% endblock %}
