--- a/src/Sustain/AppBundle/Resources/views/Carousel/index.html.twig
+++ b/src/Sustain/AppBundle/Resources/views/Carousel/index.html.twig
@@ -1,10 +1,11 @@
 {% extends '::base.html.twig' %}
 
 {% block body -%}
-    <h1>Carousel list</h1>
+    <div class="col-sm-10">
+        <h1>Carousel list</h1>
 
-    <table class="table">
-        <thead>
+        <table class="table">
+            <thead>
             <tr>
                 <th>Headline</th>
                 <th>Body</th>
@@ -12,34 +13,35 @@
                 <th>Url</th>
                 <th>Actions</th>
             </tr>
-        </thead>
-        <tbody>
-        {% for entity in entities %}
-            <tr>
-                <td><a href="{{ path('carousel_show', { 'id': entity.id }) }}">{{ entity.headline }}</a></td>
-                <td>{{ entity.body }}</td>
-                <td>{{ entity.image }}</td>
-                <td>{{ entity.url }}</td>
-                <td>
-                <ul>
-                    <li>
-                        <a href="{{ path('carousel_show', { 'id': entity.id }) }}">show</a>
-                    </li>
-                    <li>
-                        <a href="{{ path('carousel_edit', { 'id': entity.id }) }}">edit</a>
-                    </li>
-                </ul>
-                </td>
-            </tr>
-        {% endfor %}
-        </tbody>
-    </table>
+            </thead>
+            <tbody>
+            {% for entity in entities %}
+                <tr>
+                    <td><a href="{{ path('carousel_show', { 'id': entity.id }) }}">{{ entity.headline }}</a></td>
+                    <td>{{ entity.body|raw }}</td>
+                    <td>{{ entity.image }}</td>
+                    <td>{{ entity.url }}</td>
+                    <td>
+                        <ul>
+                            <li>
+                                <a href="{{ path('carousel_show', { 'id': entity.id }) }}">show</a>
+                            </li>
+                            <li>
+                                <a href="{{ path('carousel_edit', { 'id': entity.id }) }}">edit</a>
+                            </li>
+                        </ul>
+                    </td>
+                </tr>
+            {% endfor %}
+            </tbody>
+        </table>
 
         <ul>
-        <li>
-            <a href="{{ path('carousel_new') }}">
-                Create a new entry
-            </a>
-        </li>
-    </ul>
-    {% endblock %}
+            <li>
+                <a href="{{ path('carousel_new') }}">
+                    Create a new entry
+                </a>
+            </li>
+        </ul>
+    </div>
+{% endblock %}
